<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/fragment_setting_0"
    android:background="@color/color_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="@dimen/text_size_14sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:id="@+id/tv_choose_language"
        android:background="@drawable/bg_setting"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_54dp"
        android:layout_marginLeft="@dimen/size_24dp"
        android:layout_marginRight="@dimen/size_24dp"
        android:text="@string/language"
        android:drawablePadding="@dimen/size_8dp"
        android:fontFamily="@font/inter_regular"
        app:drawableStartCompat="@drawable/ic_setting_languages"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="@dimen/text_size_16sp"
        android:textColor="#828282"
        android:id="@+id/tv_current_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/size_3dp"
        android:fontFamily="@font/inter_regular"
        android:layout_marginEnd="12dp"
        app:drawableEndCompat="@drawable/ic_arrow_setting"
        app:layout_constraintBottom_toBottomOf="@+id/tv_choose_language"
        app:layout_constraintEnd_toEndOf="@+id/tv_choose_language"
        app:layout_constraintTop_toTopOf="@+id/tv_choose_language"/>
    <TextView
        android:textSize="@dimen/text_size_14sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:id="@+id/tv_policy"
        android:background="@drawable/bg_setting"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_54dp"
        android:layout_marginLeft="@dimen/size_24dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginRight="@dimen/size_24dp"
        android:text="@string/policy"
        android:drawablePadding="@dimen/size_8dp"
        android:fontFamily="@font/inter_regular"
        app:drawableEndCompat="@drawable/ic_arrow_setting"
        app:drawableStartCompat="@drawable/ic_setting_policy"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose_language"/>
    <TextView
        android:textSize="@dimen/text_size_14sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:id="@+id/tv_rate"
        android:background="@drawable/bg_setting"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_54dp"
        android:layout_marginLeft="@dimen/size_24dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginRight="@dimen/size_24dp"
        android:text="@string/rate_app"
        android:drawablePadding="@dimen/size_8dp"
        android:fontFamily="@font/inter_regular"
        app:drawableEndCompat="@drawable/ic_arrow_setting"
        app:drawableStartCompat="@drawable/ic_setting_rate"
        app:layout_constraintTop_toBottomOf="@+id/tv_policy"/>
    <TextView
        android:textSize="@dimen/text_size_14sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:id="@+id/tv_feedback"
        android:background="@drawable/bg_setting"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_54dp"
        android:layout_marginLeft="@dimen/size_24dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginRight="@dimen/size_24dp"
        android:text="@string/feedback"
        android:drawablePadding="@dimen/size_8dp"
        android:fontFamily="@font/inter_regular"
        app:drawableEndCompat="@drawable/ic_arrow_setting"
        app:drawableStartCompat="@drawable/ic_setting_feedback"
        app:layout_constraintTop_toBottomOf="@+id/tv_rate"/>
    <TextView
        android:textSize="@dimen/text_size_14sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:id="@+id/tv_share"
        android:background="@drawable/bg_setting"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_54dp"
        android:layout_marginLeft="@dimen/size_24dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginRight="@dimen/size_24dp"
        android:text="@string/share_app"
        android:drawablePadding="@dimen/size_8dp"
        android:fontFamily="@font/inter_regular"
        app:drawableEndCompat="@drawable/ic_arrow_setting"
        app:drawableStartCompat="@drawable/ic_setting_share"
        app:layout_constraintTop_toBottomOf="@+id/tv_feedback"/>
</androidx.constraintlayout.widget.ConstraintLayout>