<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:tag="layout/fragment_my_stories_0"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/viewBrandKit"
        android:background="@drawable/bg_setting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/pen"
        app:layout_constraintTop_toTopOf="@+id/pen"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/pen"
        android:paddingLeft="10dp"
        android:paddingTop="16dp"
        android:paddingRight="10dp"
        android:paddingBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_pen_brand_kit"
        android:layout_marginEnd="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="14sp"
        android:textColor="@color/black"
        android:id="@+id/tvBrandKit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand_kit"
        android:fontFamily="@font/inter_medium"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toTopOf="@+id/tvManage"
        app:layout_constraintStart_toStartOf="@+id/viewBrandKit"
        app:layout_constraintTop_toTopOf="@+id/viewBrandKit"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="12sp"
        android:textColor="#828282"
        android:id="@+id/tvManage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_colors_and_logos"
        android:fontFamily="@font/inter_regular"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewBrandKit"
        app:layout_constraintStart_toStartOf="@+id/viewBrandKit"
        app:layout_constraintTop_toBottomOf="@+id/tvBrandKit"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="18sp"
        android:textColor="@color/color_gray"
        android:id="@+id/tv_no_data"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:orientation="vertical"
        android:id="@+id/rv_stories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewBrandKit"
        app:spanCount="2"/>
</androidx.constraintlayout.widget.ConstraintLayout>