<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/layout_try_plus_0"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_4sdp"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_banner_pro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/img_pro_banner"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/white"
                android:id="@+id/tv_try_plus"
                android:background="@drawable/bg_try_plus"
                android:paddingLeft="@dimen/_8sdp"
                android:paddingTop="@dimen/_6sdp"
                android:paddingRight="@dimen/_8sdp"
                android:paddingBottom="@dimen/_6sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/try_plus"
                android:fontFamily="@font/inter_medium"
                android:layout_marginEnd="@dimen/_8sdp"
                android:paddingHorizontal="@dimen/_8sdp"
                android:paddingVertical="@dimen/_6sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/white"
                android:ellipsize="end"
                android:id="@+id/tv_unlock_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/unlock_all_editing"
                android:maxLines="1"
                android:includeFontPadding="false"
                android:fontFamily="@font/inter_bold"
                android:layout_marginStart="@dimen/_13sdp"
                app:layout_constraintBottom_toTopOf="@+id/tv_unlock_content"
                app:layout_constraintEnd_toStartOf="@+id/tv_try_plus"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_try_plus"/>
            <TextView
                android:textSize="@dimen/_9ssp"
                android:textColor="@color/white"
                android:ellipsize="end"
                android:id="@+id/tv_unlock_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/manage_custom_fonts_logo_and_more"
                android:maxLines="1"
                android:includeFontPadding="false"
                android:alpha="0.7"
                android:fontFamily="@font/inter_medium"
                android:layout_marginStart="@dimen/_13sdp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_try_plus"
                app:layout_constraintEnd_toStartOf="@+id/tv_try_plus"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_unlock_all"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>